objects/LAT_BR_Behavior_Analisis__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BR_BA_Credit_Analysis__c</fullName>
        <label>Credit Analysis</label>
        <referenceTo>Analise_de_credito__c</referenceTo>
        <relationshipName>Behavior_Analisis</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_BR_BA_Customer_Behavior__c</fullName>
        <label>Customer Behavior</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_BA_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_BA_Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>LAT_BR_Behavior Analisis</label>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>Behavior Analisis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behavior Analisis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>